# spatio_DARLIN

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
QC/: BMKS3000.ipynb
darlin/: help_functions.py
doc/: BMKS3000_upstream.md  CHANGELOG.md
legacy/matlab/: README.md
legacy/matlab/snakefiles/: BMKS3000_matlab.smk
legacy/matlab/spatio_darlin/: help_functions.py  settings.py
legacy/matlab/test/: test_bmk_matlab.sh
snakefiles/: BMKS3000.smk  BMKS3000_matlab.smk  snakefile_DARLIN_BMKS3000.py
spatio_darlin/: help_functions.py  settings.py
test/: download_test_data.sh  test_bmk.sh
test/test_BMKS3000/: config-CA.yaml  config-RA.yaml  config-TA.yaml  test_bmk.sh  test_bmk_matlab.sh
